# compact_vec

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs  serde_impl.rs
