[package]
name = "compactvec"
authors = ["shitohana <kyudytskiy@gmail.com>"]
description = "Vec<u32> that auto-selects 1/2/3/4-byte storage per element, upgrading in place when values grow"
readme = "README.md"
repository = "https://github.com/shitohana/compact_vec"
license = "MIT"
version = "0.1.0"
edition = "2024"
categories = [
    "data-structures",
    "memory-management",
]
keywords = [
    "vec",
    "compact",
    "memory",
    "integer",
    "collection",
]

[dependencies]
serde = { version = "1.0.228", optional = true }

[dev-dependencies]
rmp-serde = "1.3.1"

[features]
serde = ["dep:serde"]
